public/assets/styles/HomePage/_Hero.scss
.hero-container {
  background-image: url("../../../../assets/HomePage/hero.svg");

  background-size: cover;
  background-position: center; 
  background-repeat: no-repeat; 
  width: 100%;

  object-fit: cover;
  width: 100vw;

  height: 765px;
  font-family: Assistant;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
  ::placeholder {
    color: #393939;
  }
  .heading {
    color: #ffffff;
    text-align: center;
    margin: 56px auto;
    p {
      font-size: 20px;
      line-height: 24px;
    }
    h1 {
      font-size: 56px;
      font-weight: 600;
      line-height: 56px;
      letter-spacing: -1px;
    }
  }
  .form-max {
    width: 858.61px;
    height: 104.59px;
    border-radius: 20px;
    border: none;
    background-color: #f4f3f0;
    margin-bottom: 32px;
    div {
        display: flex;
        align-items: center;
        justify-content: center;
        gap: 16px;
        margin: 10px;
      div {
        position: relative;
        input {
          width: 587.5px;
          height: 56.59px;
          border: 1px solid #D9DBDD;
          border-radius: 4px;
          outline: none;
          padding-left: 16px;
        }
        a {
          position: absolute;
          right: 16px;
          z-index: 10;
        }
      }
      button {
        background-color: #2962ff;
        color: #ffffff;
        width: 191.11px;
        height: 56px;
        border-radius: 8px;
        border: 0;
        font-size: 14px;
        font-weight: 600;
        line-height: 15.96px;
        letter-spacing: 0.87px;
        .searchIcon {
          width: 17.87px;
          height: 17px;
          margin-right: 0.2rem;
        }
      }
    }
  }
  .form-min {
    width: 70%;
    height: 114px;
    border-radius: 9px;
    border: none;
    background-color: #f4f3f0;
    margin-bottom: 32px;
    div {
        display: flex;
        align-items: center;
        flex-direction: column;
        justify-content: center;
        label{
            font-size: 16px;
            font-weight: 400;
            line-height: 16px;
            color: #393939;
            padding: 10px;
            align-self: flex-start;
            padding-left: 20px;
        }
      div {
        position: relative;
        width: 93%;
        input {
          width: 100%;
          height: 39px;
          border: 1px solid #D9DBDD;
          border-radius: 4px;
          outline: none;

          padding-left: 32px;

          padding-left: 40px;
        }
        .search {
          position: absolute;
          width: 17.87px;
          height: 17px;
          left: 12px;
          top: 12px;
          z-index: 20;
        }
      }
    a{
        font-size: 14px;
        font-weight: 400;
        line-height: 12.14px;
        padding: 10px;
        align-self: flex-end;
      padding-right: 20px;
        }
    }
  }
  .cities {
    width: 740.77px;
    height: 146px;
    .text {
      font-size: 16px;
      font-weight: 700;
      line-height: 16px;
      color: #ffffff;
      margin-bottom: 24px;
    }
  
    .grid {
      display: grid;
      grid-template-columns: repeat(6, 1fr);
      div {
        text-align: center;
        display: flex;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        div {
          width: 73.59px;
          height: 73.59px;
          border: 0;
          border-radius: 11.77px;
          background-color: #f4f3f0;
          display: flex;
          align-items: center;
          justify-content: center;
        }
        span {
          font-size: 14px;
          font-weight: 600;
          line-height: 24px;
          color: #ffffff;
          width: auto;
          margin-top: 6px;
          height: 24px;
        }
      }
    }
  }
}

.Hero {
  @media screen and (max-width: 990px) {
    justify-content: flex-start;
    padding-top: 4rem;
    .cities {

      width: 297.38px;
      height: 268px;

      width: 55%;

      .text {
        text-align: center;
      }
      .grid {
        grid-template-columns: repeat(3, 1fr);
        gap: 40px;
      }
    }
    .heading{
      p{
        font-size: 18px;
        line-height: 24px;
      }
      h1{
        font-size: 36px;
        line-height: 32px;
      }
    }
  }
}

.Hero{
  @media screen and (max-width: 755px) {
    .heading {
      p {
        width: 44%;
        margin: auto;
      }
    }
  }
}

.Hero {
  @media screen and (max-width: 480px) {
    padding-top: 2rem;
    .form-min{
      div{
        div{
          width: 88%;
        }
      }
    }
    .cities {
      .grid {
        div{
          div{
            width: 60.59px;
            height: 62.59px;
          }
        }
      }
    }
  }
}

.Hero {
  @media screen and (max-width: 455px) {
    height: 840px;
    .cities{
      width: 64%;
    }
  }
}

